// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components:404 Custom code & messages 1`] = `
<div
  class="container w-xxl w-auto-xs m-auto"
>
  <div
    class="text-center m-b-lg"
  >
    <h1
      class="text-shadow text-white"
    >
      500
    </h1>
    <div
      class="text-danger"
    >
      Internal Error
    </div>
  </div>
</div>
`;

exports[`Components:404 default View 1`] = `
<div
  class="container w-xxl w-auto-xs m-auto"
>
  <div
    class="text-center m-b-lg"
  >
    <h1
      class="text-shadow text-white"
    >
      404
    </h1>
  </div>
</div>
`;
